--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
-    "rewrites": [{ 
-        "source": "/admin",
-        "destination": "/admin" }]
-  }
+    "rewrites": [
+        {
+            "source": "/admin/(.*)",
+            "destination": "/admin/index.html"
+        }
+    ],
+    "github": {
+        "silent": true
+    }
+}
