--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "konkamon-blog",
+  "name": "payload-test",
   "description": "Website template for Payload",
   "version": "1.0.0",
   "main": "dist/server.js",
@@ -44,7 +44,6 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
     "@payloadcms/eslint-config": "^0.0.1",
-    "@payloadcms/next-payload": "^0.1.11",
     "@swc/core": "1.3.76",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^4.17.9",
@@ -63,7 +62,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "nodemon": "^2.0.6",
-    "prettier": "^2.8.8",
+    "prettier": "^2.7.1",
     "slate": "0.91.4",
     "ts-node": "10.9.1",
     "typescript": "^4.8.4"
